WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150006
REGRESSION(
r182192
): Ligatures do not interact correctly with SHY in some fonts
https://bugs.webkit.org/show_bug.cgi?id=150006
Summary
REGRESSION(r182192): Ligatures do not interact correctly with SHY in some fonts
Myles C. Maxfield
Reported
2015-10-10 15:37:08 PDT
Created
attachment 262836
[details]
Reduction See attached reduction.
Attachments
Reduction
(309 bytes, text/html)
2015-10-10 15:37 PDT
,
Myles C. Maxfield
no flags
Details
Reduction font
(17.43 KB, application/octet-stream)
2015-10-10 15:37 PDT
,
Myles C. Maxfield
no flags
Details
Option 1
(3.25 KB, patch)
2015-10-10 17:10 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Option 1
(6.54 KB, patch)
2015-10-10 17:27 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Option 2
(5.71 KB, patch)
2015-10-10 17:29 PDT
,
Myles C. Maxfield
simon.fraser
: review+
ap
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2015-10-10 15:37:54 PDT
Created
attachment 262837
[details]
Reduction font
Myles C. Maxfield
Comment 2
2015-10-10 15:41:11 PDT
Occurs on iOS and OS X
Myles C. Maxfield
Comment 3
2015-10-10 15:45:05 PDT
Problem occurs on El Capitan, but does not occur on Yosemite.
Myles C. Maxfield
Comment 4
2015-10-10 16:15:30 PDT
Disregard my last comment. Problem occurs on shipping Safari on Yosemite. On ToT Safari on Yosemite, font-variant-ligatures: common-ligatures; fixes the problem. Because on shipping Safari, the problem goes away when you select the text, this is likely a disagreement between our fast and complex text paths. The previous evidence about font-variant-ligatures seems to agree with this (because font-variant-ligatures forces us onto our complex path)
Myles C. Maxfield
Comment 5
2015-10-10 16:20:20 PDT
(In reply to
comment #4
)
> Disregard my last comment. > > Problem occurs on shipping Safari on Yosemite. > > On ToT Safari on Yosemite, font-variant-ligatures: common-ligatures; fixes > the problem. > > Because on shipping Safari, the problem goes away when you select the text, > this is likely a disagreement between our fast and complex text paths. The > previous evidence about font-variant-ligatures seems to agree with this > (because font-variant-ligatures forces us onto our complex path)
Same thing on El Capitan.
Myles C. Maxfield
Comment 6
2015-10-10 16:55:52 PDT
I caused this in
r182192
. I'm shifting glyphs and advances, but not the rest of GlyphBuffer's contents.
Myles C. Maxfield
Comment 7
2015-10-10 17:10:04 PDT
Created
attachment 262838
[details]
Option 1
WebKit Commit Bot
Comment 8
2015-10-10 17:12:42 PDT
Attachment 262838
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:15: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Myles C. Maxfield
Comment 9
2015-10-10 17:27:08 PDT
Created
attachment 262839
[details]
Option 1
Myles C. Maxfield
Comment 10
2015-10-10 17:29:35 PDT
Created
attachment 262840
[details]
Option 2
Myles C. Maxfield
Comment 11
2015-10-10 17:29:44 PDT
Option 2 is preferable.
Alexey Proskuryakov
Comment 12
2015-10-10 17:57:45 PDT
Comment on
attachment 262840
[details]
Option 2 View in context:
https://bugs.webkit.org/attachment.cgi?id=262840&action=review
> Source/WebCore/ChangeLog:14 > + However, now that <
rdar://problem/20230073
> is fixed, we don't need to perform this filter in > + the first place.
Please make sure that all Mavericks bots (including EWS) have the appropriate security update installed. I'm pretty sure that they do not, so landing this will make the original problem occur again.
Myles C. Maxfield
Comment 13
2015-10-12 15:09:02 PDT
Committed
r190891
: <
http://trac.webkit.org/changeset/190891
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug