REGRESSION(r182192): Ligatures do not interact correctly with SHY in some fonts https://bugs.webkit.org/show_bug.cgi?id=150006

Reviewed by Simon Fraser.

Source/WebCore:

When performing font transforms and we encounter kCGFontIndexInvalid, we filter it out of the
GlyphBuffer. However, this filter was only interacting with part of the GlyphBuffer instead
of the whole thing. This causes glyph IDs from one font to be rendered with other fonts,
thereby showing garbage glyphs.

However, now that <rdar://problem/20230073> is fixed, we don't need to perform this filter in
the first place.

Test: fast/text/undefined-glyph-with-ligature.html

* platform/graphics/GlyphBuffer.h:
(WebCore::GlyphBuffer::copyItem):
(WebCore::GlyphBuffer::swap):
* platform/graphics/WidthIterator.cpp:
(WebCore::WidthIterator::applyFontTransforms):

LayoutTests:

* fast/text/resources/tiny-ligature-font.svg: Added.
* fast/text/undefined-glyph-with-ligature-expected.html: Added.
* fast/text/undefined-glyph-with-ligature.html: Added.

Canonical link: https://commits.webkit.org/168178@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190891 268f45cc-cd09-0410-ab3c-d52691b4dbfc